tests/errors/runtime/E012_no_export.zy
<# ../semantic/E012_mod <= m

>> m::not_exported_fn() ¶
